--- a/views/client/pages/topics/index.pug
+++ b/views/client/pages/topics/index.pug
@@ -2,4 +2,16 @@ extend ../../layouts/default.pug
 include ../../mixins/box-head.pug
 
 block main
-  +box-head(pageTitle)
+  .container.my-3
+    .row
+      .col-12
+        +box-head(pageTitle)
+    .row
+      for topic in listTopics
+        .col-6.mb-3
+          div(class="card")
+            img(src=topic.avatar)
+            div(class="card-body")
+              h5(class="card-title") #{topic.title}
+              p(class="card-text") #{topic.description}
+              a(href=`/songs/${topic.slug}` class="btn btn-primary") Xem chi tiết
