Lam tinh nang dang nhap, dang ki, dang xuat

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -12,3 +12,15 @@ header.header
               a(href="/") Trang chủ
             li
               a(href="/topics") Chủ đề
+            if (!user)
+              li
+                a(href="/user/register") Đăng kí
+              li
+                a(href="/user/login") Đăng nhập
+            else 
+              li(class="infor-user")
+                a(href=`/user/detail/${user.id}`) #{user.fullName}
+                .img-user 
+                  img(src=user.avatar, alt=user.fullName)
+              li
+                a(href="/user/logout") Đăng xuất
