--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -131,6 +131,15 @@
 .singer-detail .inner-actions .inner-like i {
   color: #0059ff;
 }
+
+
+.singer-detail .inner-actions .inner-like.like {
+  color: #0059ff;
+}
+.singer-detail .inner-actions .inner-like.like i {
+  font-weight: 900;
+}
+
 .singer-detail .inner-actions .inner-heart {
   cursor: pointer;
 }
@@ -211,3 +220,39 @@
   padding: 10px 15px;
 }
 /* End singer-detail */
+
+/* previewImage */
+.image-preview {
+  width: 100px;
+  height: auto;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+}
+/* End previewImage */
+
+
+/* avatar-user */
+ul .infor-user {
+  display: flex;
+  gap: 5px;
+}
+
+ul .infor-user a {
+  order: 1;
+}
+.img-user {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.img-user img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  order: 0;
+}
+/* End avatar-user */
