Tinh nang bai hat yeu thich

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -146,6 +146,13 @@
 .singer-detail .inner-actions .inner-heart i {
   color: #b90000;
 }
+
+.singer-detail .inner-actions .inner-heart.love-song {
+  color: #b90000;
+}
+.singer-detail .inner-actions .inner-heart.love-song i {
+  font-weight: 900;
+}
 .singer-detail .inner-play {
   display: flex;
   align-items: center;
