--- a/views/client/pages/songs/detail.pug
+++ b/views/client/pages/songs/detail.pug
@@ -18,7 +18,7 @@ block main
               <i class="fa-regular fa-thumbs-up"></i>
               <span class="inner-number mr-1">#{song.like}</span>
               | thích
-            div(class="inner-action inner-heart")
+            div(class="inner-action inner-heart " + (song.loveSong=="love"?"love-song":"") button-love=`${song.id}`)
               <i class="fa-regular fa-heart"></i> Bài hát yêu thích
           .inner-play
             .inner-avatar
