--- a/views/client/pages/topics/index.pug
+++ b/views/client/pages/topics/index.pug
@@ -14,4 +14,4 @@ block main
             div(class="card-body")
               h5(class="card-title") #{topic.title}
               p(class="card-text") #{topic.description}
-              a(href=`/songs/${topic.slug}` class="btn btn-primary") Xem chi tiết
+              a(href=`/topics/${topic.slug}` class="btn btn-primary") Xem chi tiết
