Them flash va sua lai ten ca si khi search

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -331,3 +331,23 @@ ul .infor-user a {
   margin-bottom: 2px;
 }
 /* End box-search */
+
+
+/* Show-alert */
+
+.show-alert {
+  position: fixed;
+  top: 70px;
+  right: 20px;
+  z-index: 999;
+  font-size: 25px;
+  padding: 5px;
+}
+
+.alert-success {
+  border-radius: 10px;}
+
+.show-alert.hidden {
+  display: none;
+}
+/* End Show-alert */
