--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -1,3 +1,4 @@
+include ../mixins/alert.pug
 doctype html
 html
   head
@@ -7,6 +8,8 @@ html
   body
     
     include ../partials/header.pug
+    +alert-success(1500)
+    +alert-error(1500)
     .body
       include ../partials/sider.pug
       .main
